*SVN*

* Fix problem with sendmail delivery where headers should be delimited by \n characters instead of \r\n, which confuses some mail readers #1742 [Kent Sibilev]


*1.0.1* (11 July, 2005)

* Bind to Action Pack 1.9.1


*1.0.0* (6 July, 2005)

* Avoid adding nil header values #1392

* Better multipart support with implicit multipart/alternative and sorting of subparts [John Long]

* Allow for nested parts in multipart mails #1570 [Flurin Egger]

* Normalize line endings in outgoing mail bodies to "\n" #1536 [John Long]

* Allow template to be explicitly specified #1448 [tuxie@dekadance.se]

* Allow specific "multipart/xxx" content-type to be set on multipart messages #1412 [Flurin Egger]

* Unquoted @ characters in headers are now accepted in spite of RFC 822 #1206

* Helper support (borrowed from ActionPack)

* Silently ignore Errno::EINVAL errors when converting text.

* Don't cause an error when parsing an encoded attachment name #1340 [lon@speedymac.com]

* Nested multipart message parts are correctly processed in TMail::Mail#body

* BCC headers are removed when sending via SMTP #1402

* Added 'content_type' accessor, to allow content type to be set on a per-message basis. content_type defaults to "text/plain".

* Silently ignore Iconv::IllegalSequence errors when converting text #1341 [lon@speedymac.com]

* Support attachments and multipart messages.

* Added new accessors for the various mail properties.

* Fix to only perform the charset conversion if a 'from' and a 'to' charset are given (make no assumptions about what the charset was) #1276 [Jamis Buck]

* Fix attachments and content-type problems #1276 [Jamis Buck]

* Fixed the TMail#body method to look at the content-transfer-encoding header and unquote the body according to the rules it specifies #1265 [Jamis Buck]

* Added unquoting even if the iconv lib can't be loaded--in that case, only the charset conversion is skipped #1265 [Jamis Buck]
